--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 
+### Suivi Data Camp : ASHRAE - Great Energy Predictor III
+How much energy will a building consume?
+
+Suivi 1 :
+- Choix de la team 
+- Choix du sujet 
+- Exploratory Data Analysis
+
+
+Suivi 2 :
+-Pre-Processing
+
+
