--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-### Suivi Data Camp : ASHRAE - Great Energy Predictor III
+# Suivi Data Camp : ASHRAE - Great Energy Predictor III
 How much energy will a building consume?
 
 Suivi 1 :
