--- a/README
+++ b/README
@@ -5,10 +5,11 @@ How much energy will a building consume?
 Suivi 1 :
 - Choix de la team 
 - Choix du sujet 
-- Exploratory Data Analysis
+- Exploratory Data Analysis (part 1)
 
 
 Suivi 2 :
--Pre-Processing
+- Exploratory Data Analysis (part 2)
+- Pre-Processing
 
 
